added heading, sub heading and lists about cats

--- a/index.html
+++ b/index.html
@@ -5,7 +5,20 @@
 <title>My test page
 </title>
 </head>
+<h1>My Grumpy Cat
+</h1>
+<h2>Really... she <strong>grumpy</strong></h2>
+</h2>
+<p>Cats are known to be</p>
+<ul>
+    <li>hungry
+    </li>
+    <li>sleepy</li>
+    <li>grumps</li>
+</ul>
 <body>
-    <img src="images/cat-one.jpg" alt="my test image">
+    <p class="edit-note">My cat is a <strong>Grump</strong> </p>
+
+    <img src="images/cat-one.jpg" alt="A grumpy looking cat sitting on a fence">
 </body>
-</html>
+</html
