added hyperlink to cat images and resized image

--- a/index.html
+++ b/index.html
@@ -16,9 +16,14 @@
     <li>sleepy</li>
     <li>grumps</li>
 </ul>
+<p>click
+    <a href="https://www.google.com/search?q=cats&client=ubuntu&hs=ide&channel=fs&source=lnms&tbm=isch&sa=X&ved=0ahUKEwipib-Aue_kAhUSAWMBHV68BvgQ_AUIESgB&biw=1299&bih=639">here</a>
+    to see more cats
+</p>
+
 <body>
     <p class="edit-note">My cat is a <strong>Grump</strong> </p>
 
-    <img src="images/cat-one.jpg" alt="A grumpy looking cat sitting on a fence">
+    <img src="images/cat-one.jpg" width="50%" height="50%" alt="A grumpy looking cat sitting on a fence">
 </body>
 </html
