bug fix 1 index.html fixed bug where title was not displayed due to unresolved '>'

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8">
-<link href="styles/style.css" rel="stylesheet"
-<title>My test page
-</title>
-</head>
+        <head>    
+                <meta charset="utf-8">
+                   <title>test site</title>
+                <link href="styles/style.css" rel="stylesheet"> </head>
+            
+
 <h1>My Grumpy Cat
 </h1>
-<h2>Really... she <strong>grumpy</strong></h2>
+<h2 id="my-id1">Really... she <strong>grumpy</strong></h2>
 </h2>
 <p>Cats are known to be</p>
 <ul>
