added text style set

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
         <head>    
                 <meta charset="utf-8">
                    <title>test site</title>
-                <link href="styles/style.css" rel="stylesheet"> </head>
+                <link href="styles/style.css" rel="stylesheet">
+                <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+            </head>
             
 
 <h1>My Grumpy Cat
